Connection with database successfully implemented

--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <body>
         <h1> Hello </h1>
         <div id="test"> 
-            Nothing yer
+            Nothing yet
         </div>
         <button onclick="backend()"> ClickMe! </button>
 
